manifests/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: <your-acr-name>.azurecr.io/openllm-chat:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
