manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-api-hub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: llm-api.10.0.97.62
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-api-hub
                port:
                  number: 80
